# ResearchProject

./: .gitignore  README.md
01_Planning/: README.md  Radar Odometry Planning.xlsx
01_Planning/01_Planning/: README.md
01_Planning/02_Diagrams/: README.md  SensorFusion.drawio
02_Models/: 4-switch.SLDPRT  Antenna.SLDPRT  IWR6843AOP.SLDASM  IWR6843AOP.SLDPRT  MTi-G-710.SLDPRT  NineBot 3D View_Left_28March.SLDPRT  NineBot.SLDPRT  README.md  SensorAssmbly.SLDASM  SensorBase.SLDPRT  SensorMount.SLDPRT  swith-lever.SLDPRT  u-usv.SLDPRT
02_Models/01_CylindricalMountPin/: MountPin.SLDPRT  README.md  SensorBase.SLDPRT
02_Models/02_HexMountPin/: MountPin.SLDPRT  MountPinStop.SLDPRT  README.md  SensorAssmbly.SLDASM  SensorBase.SLDPRT  SensorMount.SLDPRT
02_Models/05_MTi-G-710/: MTi-G-710.SLDASM  MTi-G-710_MountBase.SLDPRT  MTi-G-710_MountPlatform.SLDPRT
02_Models/06_NineBot/: MidFrameTube.SLDPRT
02_Models/07_wireHolder/: wire2Frame.SLDPRT
02_Models/Fariha sent/: NineBot 3D View Left 28March.SLDPRT
02_Models/IWR6843AOP/: IWR6843AOP.SLDPRT  README.md
03_Code/: README.md  cumulative_tego.txt
03_Code/03_QTFramework/01_pointCloudVisualizer/pointCloud/: CMakeLists.txt  main.cpp
04_Logs/: README.md
05_test/: README.md  image.py
05_test/04_ICP/: ICP.py  (+5 more)
06_PresentationUpdates/: README.md  Radar_ResearchProject.pptx  mmWave_Radar_Presentation.pptx
07_Literature/: Understanding_UART_Data_Output_Format.html
08_Documentation/: Bibliography.tex  ProjectNavigationGuide.md  README.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
09_Images/: README.md
(+720 files in other folders)
